mail/network-policy-postfix-allow-ingress-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postfix-allow-ingress-alertmanager
  namespace: mail
spec:
  podSelector:
    matchLabels:
      app: postfix
      tier: mail
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app: alertmanager
      ports:
        - protocol: TCP
          port: 587
